<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MapActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#979393"
        app:layout_constraintBottom_toTopOf="@id/layout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="185dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="61dp"
            android:text="WNW"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupMapType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupMapType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="310dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButtonNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Normal"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="21dp" />

            <RadioButton
                android:id="@+id/radioButtonSatellite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Satellite"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="75dp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="407dp"
        android:layout_height="770dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/layout1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="406dp"
        android:layout_height="99dp"
        android:layout_marginTop="626dp"
        android:layout_marginBottom="1dp"
        android:background="#1A1A48"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/contactslistbutton"
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_contacts"
            app:srcCompat="@android:drawable/btn_star_big_on"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/mapsicon"
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_maps"
            app:srcCompat="@drawable/mapicon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/settingsicon"
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_setting"
            app:srcCompat="@drawable/settingsicon"
            tools:ignore="RedundantDescriptionCheck" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>